Se comienza a agregar la persistencia de Mongo

--- a/Entregable-6-Orciuolo/src/views/chat.handlebars
+++ b/Entregable-6-Orciuolo/src/views/chat.handlebars
@@ -1,3 +1,17 @@
 <h1>Bienvenido al chat  </h1>
+
+<article>
+   <form id="form-message">
+      <input id="input-message" type="text" placeholder="Escribe tu mensaje" required>
+      <input type="submit" value="Enviar">
+   </form>
+</article>
+<h3>Mensajes</h3>
+<article>
+   <div id="log-messages"></div>
+</article>
+
+
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/index.js"></script>
