Se finaliza con la view de carts

--- a/Entregable-7-Orciuolo/src/views/products.handlebars
+++ b/Entregable-7-Orciuolo/src/views/products.handlebars
@@ -1,23 +1,51 @@
 <h1>Lista de Productos</h1>
 
-{{#each payload}}
-<article>
-   <header>
-      <p>{{this.title}}</p>
-   </header>
-   <p>{{this.description}}</p>
-   <p>{{this.price}}</p>
-   <p>{{this.category}}</p>
-   <p>{{this.code}}</p>
-   <p>{{this.stock}}</p>
-   <p>{{this.statusP}}</p>
+<a href="http://localhost:8080/carts/6583995bf0633ab709d9b5a0">Ir al carrito</a>
 
-   <form id="addCart" data-id="{{this._id}}">
-      <input type="number" id="quantityIn{{this._id}}" placeholder="Introduzca cantidad" min="1">
-      <button type="submit">Agregar</button>
-   </form>
+<article>
+   <table>
+      <tr>
+         <th><strong>Titulo</strong></th>
+         <th><strong>Descripción</strong></th>
+         <th><strong>Categoria</strong></th>
+         <th><strong>Stock</strong></th>
+         <th><strong>Precio</strong></th>
+         <th><strong>Cantidad</strong></th>
+         <th><strong>Agregar</strong></th>
+      <tr>
+         <tbody>
+            {{#each payload}}
+            <tr>
+               <td><strong>{{this.title}}</strong></td>
+               <td>{{this.description}}</td>
+               <td>{{this.category}}</td>
+               <td>{{this.stock}}</td>
+               <td>${{this.price}}</td>
+               <td>
+                  <form id="addCart" data-id="{{this._id}}">
+                     <input type="number" id="quantityIn{{this._id}}" min="1">
+                  </form>
+               </td>
+               <td>
+                  <form id="addCart" data-id="{{this._id}}">
+                     <button type="submit">Agregar</button>
+                  </form>
+               </td>
+            </tr>
+            {{/each}}
+         </tbody>
+      </tr>
+   </table>
 </article>
-{{/each}}
+
+
+
+
+
+
+
+
+
 
 <div>
    <p>Pagina actual: {{this.page}}</p>
