--- a/Entregable-8-Orciuolo/src/views/login.handlebars
+++ b/Entregable-8-Orciuolo/src/views/login.handlebars
@@ -1,5 +1,5 @@
 <article>
-   <form action="/api/sessions/login" method="post">
+   <form action="/sessions/login" method="post">
       <header>
          <h1>Inicio de sesión</h1>
       </header>
