--- a/Entregable-8-Orciuolo/src/views/products.handlebars
+++ b/Entregable-8-Orciuolo/src/views/products.handlebars
@@ -1,6 +1,11 @@
 <h1>Lista de Productos</h1>
 
-<a href="http://localhost:8080/carts/6583995bf0633ab709d9b5a0">Ir al carrito</a>
+<div class="grid">
+   <a href="http://localhost:8080/carts/6583995bf0633ab709d9b5a0">Ir al carrito</a>
+   <a href="http://localhost:8080/sessions/logout">Cerrar sesión</a>
+   <div></div>
+   <div></div>
+</div>
 
 <article>
    <table>
