Se finaliza con desafío entregable

--- a/Entregable-8-Orciuolo/src/views/realTimeProducts.handlebars
+++ b/Entregable-8-Orciuolo/src/views/realTimeProducts.handlebars
@@ -1,3 +1,14 @@
+<h5>Bienvenido {{this.user}}!</h5>
+
+<h1>Perfil de Administrador</h1>
+
+<div class="grid">
+   <a href="http://localhost:8080/products">Ir a Productos</a>
+   <a href="http://localhost:8080/sessions/logout">Cerrar sesión</a>
+   <div></div>
+   <div></div>
+</div>
+
 <h3>Agregar producto:</h3>
 <form id="input-form" class="container">
    <input type="text" id="input-title" placeholder="Titulo" required>
