--- a/Entregable-8-Orciuolo/src/views/products.handlebars
+++ b/Entregable-8-Orciuolo/src/views/products.handlebars
@@ -1,3 +1,5 @@
+<h5>Bienvenido {{this.user}}!</h5>
+
 <h1>Lista de Productos</h1>
 
 <div class="grid">
@@ -43,15 +45,6 @@
    </table>
 </article>
 
-
-
-
-
-
-
-
-
-
 <div>
    <p>Pagina actual: {{this.page}}</p>
    <a href="{{this.prevLink}}" role="button" {{#unless hasPrevPage}}disabled{{/unless}}>Página anterior</a>
@@ -59,5 +52,6 @@
 </div>
 </article>
 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/products.js"></script>
