--- a/Entregable-10-Orciuolo/src/views/login.handlebars
+++ b/Entregable-10-Orciuolo/src/views/login.handlebars
@@ -1,5 +1,5 @@
 <article>
-   <form action="/sessions/login" method="post">
+   <form action="/auth/login" method="post">
       <header>
          <h1>Inicio de sesión</h1>
       </header>
@@ -10,7 +10,7 @@
       </footer>
       <a href="/register">Quiero registrarme</a>
       <br><br>
-      <a href="/sessions/github">Iniciar con GitHub</a>
+      <a href="/auth/github">Iniciar con GitHub</a>
 
    </form>
 </article>
