--- a/Entregable-10-Orciuolo/src/views/products.handlebars
+++ b/Entregable-10-Orciuolo/src/views/products.handlebars
@@ -4,6 +4,7 @@
 
 <div class="grid">
    <a href="http://localhost:8080/carts/6583995bf0633ab709d9b5a0">Ir al carrito</a>
+   <a href="http://localhost:8080/auth/current">Me!</a>
    <a href="http://localhost:8080/auth/logout">Cerrar sesión</a>
    <div></div>
    <div></div>
